Updste dependencies and build files

--- a/Sources/Stanza/Resources/Localizable.xcstrings
+++ b/Sources/Stanza/Resources/Localizable.xcstrings
@@ -60,6 +60,9 @@
         }
       }
     },
+    "Error: %@" : {
+
+    },
     "Hello [%@](https://skip.tools)!" : {
       "extractionState" : "stale",
       "localizations" : {
